--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,73 @@
         </div>
     </section>
     <!--==========================END header ==========================-->
+    <!--========================== footer ==========================-->
+    <section class="footer">
+        <div class="footer__top">
+            <div class="container">
+                <div class="footer__logo">
+                    <a href="/">
+                        <img src="img/logo-white.png" alt="">
+                    </a>
+                    <div class="footer__logo__desc">Решения для гиперспектральной <br> визуализации</div>
+                </div>
+                <div class="footer__nav">
+                    <div class="footer__title">Продукты</div>
+                    <ul class="footer__nav__links">
+                        <li><a href="">Гиперспектральные камеры</a></li>
+                        <li><a href="">Системы</a></li>
+                        <li><a href="">Машинное зрение</a></li>
+                        <li><a href="">Гиперспектральное программное обеспечение</a></li>
+                    </ul>
+                </div>
+                <div class="footer__nav">
+                    <div class="footer__title">Поддержка</div>
+                    <ul class="footer__nav__links">
+                        <li><a href="">Приложения</a></li>
+                        <li><a href="">База знаний</a></li>
+                        <li><a href="">О нас</a></li>
+                        <li><a href="">Связаться с нами</a></li>
+                    </ul>
+                </div>
+                <div class="footer__contacts">
+                    <div class="footer__title">Наши контакты</div>
+                    <div class="footer__contacts__content">
+                        <div class="footer__contacts__label">Адресс:</div>
+                        <div class="footer__contacts__text">Россия, г. Москва, ул. Ратная, д. 8, корп.3, э 1, пом.1, к 1Е, оф.8 </div>
+                        <div class="footer__contacts__label">E-mail:</div>
+                        <div class="footer__contacts__text">info@spectraltechnology.ru </div>
+                    </div>
+                </div>
+                <div class="footer__socials">
+                    <div class="footer__title">Мы в соц. сетях:</div>
+                    <div class="footer__socials__items">
+                        <a href="/" class="footer__socials__item">
+                            <img src="img/fb.svg" alt="">
+                        </a>
+                        <a target="_blank" href="/" class="footer__socials__item">
+                            <img src="img/ig.svg" alt="">
+                        </a>
+                        <a target="_blank" href="/" class="footer__socials__item">
+                            <img src="img/tg.svg" alt="">
+                        </a>
+                        <a target="_blank" href="/" class="footer__socials__item">
+                            <img src="img/wa.svg" alt="">
+                        </a>
+                        <a target="_blank" href="/" class="footer__socials__item">
+                            <img src="img/yt.svg" alt="">
+                        </a>
+                    </div>
+                    <button class="btn footer__socials__btn">Заказать звонок</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <div class="container">
+                <a href="" class="footer__bottom__politics">Политика конфинденциальности</a>
+            </div>
+        </div>
+    </section>
+    <!--==========================END footer ==========================-->
     <script src="js/jquery.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
