--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Главная</title>
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -21,21 +22,44 @@
                     <div class="header__logo__desc">Решения для гиперспектральной <br> визуализации</div>
                 </div>
                 <ul class="header__nav">
-                    <li class="has-children"><a href="/">База знаний</a></li>
+                    <li class="has-children">
+                        <a href="/">База знаний</a>
+                        <ul class="submenu">
+                            <li><a href="">Pika L</a></li>
+                            <li><a href="">Pika XC2</a></li>
+                            <li><a href="">Pika NIR-320</a></li>
+                            <li><a href="">Pika NIR-640</a></li>
+                            <li><a href="">Pika NUV</a></li>
+                            <li><a href="">Объективные линзы</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/">О нас</a></li>
                     <li><a href="/">Связаться с нами</a></li>
                 </ul>
-                <button class="btn">Заказать звонок</button>
+                <button class="btn header__top__callorder">Заказать звонок</button>
                 <div class="header__phoneblock">
                     <a href="tel:8 800 555 55 55" class="header__phone">8 800 555 55 55</a>
                     <div class="header__phone__desc">Звонок по России бесплатно</div>
+                </div>
+                <div class="header__hamburger">
+                    <img src="img/hamburger.svg" alt="">
                 </div>
             </div>
         </div>
         <div class="header__bottom">
             <div class="container">
                 <ul class="header__nav">
-                    <li class="has-children"><a href="/">Гиперспектральные камеры</a></li>
+                    <li class="has-children">
+                        <a href="/">Гиперспектральные камеры</a>
+                        <ul class="submenu">
+                            <li><a href="">Pika L</a></li>
+                            <li><a href="">Pika XC2</a></li>
+                            <li><a href="">Pika NIR-320</a></li>
+                            <li><a href="">Pika NIR-640</a></li>
+                            <li><a href="">Pika NUV</a></li>
+                            <li><a href="">Объективные линзы</a></li>
+                        </ul>
+                    </li>
                     <li class="has-children"><a href="/">Системы</a></li>
                     <li><a href="/">Машинное зрение</a></li>
                     <li><a href="/">Гиперспектральное программное обеспечение</a></li>
@@ -45,6 +69,242 @@
         </div>
     </section>
     <!--==========================END header ==========================-->
+    <!-- ============================ hero ============================== -->
+    <section class="hero" style="background-image: url(img/hero.jpg);">
+        <div class="container">
+            <h1 class="hero__title">Решения для гиперспектральной визуализации</h1>
+            <div class="hero__links">
+                <a href="" class="link">Введение в гиперспектральную визуализацию</a>
+                <a href="" class="link">Приложения для гиперспектральной визуализации</a>
+            </div>
+        </div>
+    </section>
+    <!-- ============================END hero ============================== -->
+    <!-- ============================END sec-1 ============================== -->
+    <section class="sec-1">
+        <div class="container">
+            <!-- block-1 -->
+            <div class="block-1">
+                <div class="block-1__text">
+                    <h2 class="sec-title">Системы гиперспектральной визуализации</h2>
+                    <p>Комплексные системы для приложений дистанционного зондирования в лабораториях, на открытом воздухе и с воздуха, а также специальные решения для гиперспектрального машинного зрения.</p>
+                    <p> Наши гиперспектральные камеры можно использовать в любой из систем гиперспектральной визуализации, которые мы предлагаем для лабораторных, наружных и дистанционных измерений. Их также можно использовать для машинного зрения и оптической сортировки .</p>
+                    <div class="block-1__links">
+                        <a href="" class="link">Посмотреть полные системы</a>
+                        <a href="" class="link">Каталог продукции Resonon</a>
+                    </div>
+                </div>
+                <div class="block-1__img" style="background-image: url(img/block-1.jpg);"></div>
+            </div>
+            <!--END block-1 -->
+            <!-- block-2 -->
+            <div class="block-2">
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-1.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-2.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-3.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-4.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-5.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-6.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+                <div class="block-2__item">
+                    <div class="block-2__item__img" style="background-image: url(img/block-2__img-7.png);"></div>
+                    <div class="block-2__item__text">
+                        <div class="block-2__item__title">Бортовая система дистанционного зондирования</div>
+                        <div class="block-2__item__desc">Полные системы, обеспечивающие георегистрацию гиперспектральных данных с дронов и пилотируемых самолётов.</div>
+                    </div>
+                </div>
+            </div>
+            <!--END block-2 -->
+            <!-- block-3 -->
+            <div class="block-3">
+                <h2 class="sec-title">Гиперспектральные камеры изображения</h2>
+                <p>Resonon разрабатывает, производит и продает камеры гиперспектральной визуализации, которые сканируют спектральные диапазоны от ближнего ультрафиолетового (NUV) до коротковолнового инфракрасного (SWIR).</p>
+                <p> Наши гиперспектральные камеры легкие, компактные и надежные. У них низкий уровень рассеянного света, низкие оптические искажения и отличное качество изображения. </p>
+                <div class="block-3__items">
+                    <div class="block-3__item">
+                        <div class="block-3__item__img" style="background-image: url(img/block-3__item__img-1.png);"></div>
+                        <div class="block-3__item__title">Pika L</div>
+                        <div class="block-3__item__number">400 - 1000</div>
+                    </div>
+                    <div class="block-3__item">
+                        <div class="block-3__item__img" style="background-image: url(img/block-3__item__img-2.png);"></div>
+                        <div class="block-3__item__title">Pika L</div>
+                        <div class="block-3__item__number">400 - 1000</div>
+                    </div>
+                    <div class="block-3__item">
+                        <div class="block-3__item__img" style="background-image: url(img/block-3__item__img-3.png);"></div>
+                        <div class="block-3__item__title">Pika L</div>
+                        <div class="block-3__item__number">400 - 1000</div>
+                    </div>
+                    <div class="block-3__item">
+                        <div class="block-3__item__img" style="background-image: url(img/block-3__item__img-4.png);"></div>
+                        <div class="block-3__item__title">Pika L</div>
+                        <div class="block-3__item__number">400 - 1000</div>
+                    </div>
+                    <div class="block-3__item">
+                        <div class="block-3__item__img" style="background-image: url(img/block-3__item__img-5.png);"></div>
+                        <div class="block-3__item__title">Pika L</div>
+                        <div class="block-3__item__number">400 - 1000</div>
+                    </div>
+                </div>
+                <div class="block-3__links">
+                    <a href="" class="link">Просмотр гиперспектральных камер</a>
+                    <a href="" class="link">Скачать образцы данных</a>
+                </div>
+            </div>
+            <!--END block-3 -->
+        </div>
+    </section>
+    <!-- ============================END sec-1 ============================== -->
+    <!-- ============================ sec-2 ============================== -->
+    <section class="sec-2">
+        <div class="sec-2__img" style="background-image: url(img/sec-2.jpg);"></div>
+        <div class="sec-2__content">
+            <h2 class="sec-title">Производителям</h2>
+            <div class="sec-2__desc">Мы разрабатываем и производим гиперспектральные решения для OEM-продуктов. </div>
+            <div class="sec-2__btns">
+                <button class="btn">Просмотреть все гиперспектральные камеры</button>
+                <button class="btn gray">Документация Resonon SDK</button>
+            </div>
+        </div>
+    </section>
+    <!-- ============================END sec-2 ============================== -->
+    <!-- ============================ sec-3 ============================== -->
+    <section class="sec-3">
+        <div class="container">
+            <h2 class="sec-title">Гиперспектральные решения для исследований и промышленности.</h2>
+            <div class="sec-3__items">
+                <div class="sec-3__item">
+                    <div class="sec-3__item__img" style="background-image: url(img/sec-3__img-1.svg);"></div>
+                    <div class="sec-3__item__text">
+                        <div class="sec-3__item__title">Техническое совершенство</div>
+                        <div class="sec-3__item__desc">Данные высокой точности.</div>
+                    </div>
+                </div>
+                <div class="sec-3__item">
+                    <div class="sec-3__item__img" style="background-image: url(img/sec-3__img-2.svg);"></div>
+                    <div class="sec-3__item__text">
+                        <div class="sec-3__item__title">Прочный и надежный</div>
+                        <div class="sec-3__item__desc">Данные высокой точности.</div>
+                    </div>
+                </div>
+                <div class="sec-3__item">
+                    <div class="sec-3__item__img" style="background-image: url(img/sec-3__img-3.svg);"></div>
+                    <div class="sec-3__item__text">
+                        <div class="sec-3__item__title">Превосходная поддержка</div>
+                        <div class="sec-3__item__desc">Щелкните <span class="red">здесь</span>, чтобы связаться с нами.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ============================END sec-3 ============================== -->
+    <!-- ============================ sec-4 ============================== -->
+    <section class="sec-4">
+        <div class="container">
+            <div class="sec-4__slider owl-carousel">
+                <!-- sec-4__slider__item -->
+                <div class="sec-4__slider__item">
+                    <div class="sec-4__slider__item__text">
+                        <div class="sec-4__slider__item__title">Пример применения: жизнеспособность семян</div>
+                        <p>Жизнеспособные и нежизнеспособные семена коримбии, которые кажутся идентичными человеческому глазу, можно четко различить с помощью гиперспектральных данных. </p>
+                        <p>Опубликовано в: <span class="red">C. Nansen et al., J. Photochem. и Photobio. B (2015).</span></p>
+                        <p>Щелкните <a href="">здесь</a>, чтобы загрузить гиперспектральные данные этого исследования.</p>
+                        <div class="sec-4__slider__item__links">
+                            <a href="" class="link">Просмотр гиперспектральных камер</a>
+                            <a href="" class="link">Скачать образцы данных</a>
+                        </div>
+                    </div>
+                    <div class="sec-4__slider__item__img__wrapper">
+                        <div class="sec-4__slider__item__img" style="background-image: url(img/sec-4.jpg);"></div>
+                    </div>
+                </div>
+                <!--END sec-4__slider__item -->
+                <!-- sec-4__slider__item -->
+                <div class="sec-4__slider__item">
+                    <div class="sec-4__slider__item__text">
+                        <div class="sec-4__slider__item__title">Пример применения: жизнеспособность семян</div>
+                        <p>Жизнеспособные и нежизнеспособные семена коримбии, которые кажутся идентичными человеческому глазу, можно четко различить с помощью гиперспектральных данных. </p>
+                        <p>Опубликовано в: <span class="red">C. Nansen et al., J. Photochem. и Photobio. B (2015).</span></p>
+                        <p>Щелкните <a href="">здесь</a>, чтобы загрузить гиперспектральные данные этого исследования.</p>
+                        <div class="sec-4__slider__item__links">
+                            <a href="" class="link">Просмотр гиперспектральных камер</a>
+                            <a href="" class="link">Скачать образцы данных</a>
+                        </div>
+                    </div>
+                    <div class="sec-4__slider__item__img__wrapper">
+                        <div class="sec-4__slider__item__img" style="background-image: url(img/sec-4.jpg);"></div>
+                    </div>
+                </div>
+                <!--END sec-4__slider__item -->
+                <!-- sec-4__slider__item -->
+                <div class="sec-4__slider__item">
+                    <div class="sec-4__slider__item__text">
+                        <div class="sec-4__slider__item__title">Пример применения: жизнеспособность семян</div>
+                        <p>Жизнеспособные и нежизнеспособные семена коримбии, которые кажутся идентичными человеческому глазу, можно четко различить с помощью гиперспектральных данных. </p>
+                        <p>Опубликовано в: <span class="red">C. Nansen et al., J. Photochem. и Photobio. B (2015).</span></p>
+                        <p>Щелкните <a href="">здесь</a>, чтобы загрузить гиперспектральные данные этого исследования.</p>
+                        <div class="sec-4__slider__item__links">
+                            <a href="" class="link">Просмотр гиперспектральных камер</a>
+                            <a href="" class="link">Скачать образцы данных</a>
+                        </div>
+                    </div>
+                    <div class="sec-4__slider__item__img__wrapper">
+                        <div class="sec-4__slider__item__img" style="background-image: url(img/sec-4.jpg);"></div>
+                    </div>
+                </div>
+                <!--END sec-4__slider__item -->
+            </div>
+        </div>
+    </section>
+    <!-- ============================END sec-4 ============================== -->
+    <!-- ============================ sec-5 ============================== -->
+    <section class="sec-5">
+        <div class="container">
+            <div class="sec-5__content">
+                <h2 class="sec-title">Свяжитесь с нами</h2>
+                <div class="sec-5__desc">Щелкните ниже для получения дополнительной информации.</div>
+                <button class="btn">Свяжитесь с нами</button>
+            </div>
+            <div class="sec-5__alert">Системы высокоточной гиперспектральной съемки для исследовательских и промышленных приложений.</div>
+        </div>
+    </section>
+    <!-- ============================END sec-5 ============================== -->
     <!--========================== footer ==========================-->
     <section class="footer">
         <div class="footer__top">
